# Smart-File-Optimizer-Task-Scheduler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/smart_optimizer/: main.py
src/smart_optimizer/application/: bootstrap.py  controller.py  events.py
src/smart_optimizer/domain/: __init__.py  interfaces.py  models.py  risk.py
src/smart_optimizer/infrastructure/: database.py  duplicates.py  filesystem.py  hashing.py  logging_config.py  metrics.py  scheduler.py  thread_pool.py
src/smart_optimizer/presentation/: main_window.py  theme.py  widgets.py
